--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,9 @@
 Flask==0.9
 Flask-SQLAlchemy==0.16
 Jinja2==2.6
-SQLAlchemy==0.7.8
+SQLAlchemy==0.8.0b2
 Werkzeug==0.8.3
 argparse==1.2.1
-distribute==0.6.27
-gunicorn==0.14.5
-ipython==0.13
-psycopg2==2.4.5
+gunicorn==0.17.2
+ipython==0.13.1
 wsgiref==0.1.2
