--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
 {
-    "name" : "cizei-experiment",
-    "version" : "0.0.1",
-    "dependencies" : {
-        "coffee-script" : "1.6.x"
-    },
-    "engines" : {
-        "node" : "0.10.x",
-        "npm": "1.3.x"
-    }
+  "name": "cizei-experiment",
+  "version": "0.0.1",
+  "dependencies": {
+    "coffee-script": "1.6.x"
+  },
+  "engines": {
+    "node": "0.10.x",
+    "npm": "1.3.x"
+  },
+  "devDependencies": {
+    "grunt": "~0.4.1",
+    "grunt-contrib-coffee": "~0.7.0",
+    "grunt-contrib-compass": "~0.6.0",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-copy": "~0.4.1",
+    "grunt-contrib-watch": "~0.5.3"
+  }
 }
