--- a/package.json
+++ b/package.json
@@ -2,18 +2,19 @@
   "name": "cizei-experiment",
   "version": "0.0.1",
   "dependencies": {
-    "coffee-script": "1.6.x"
+    "coffee-script": "1.6.x",
+    "grunt": "~0.4.1",
+    "grunt-cli": "*",
+    "grunt-contrib-coffee": "~0.7.0",
+    "grunt-contrib-compass": "~0.6.0",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-copy": "~0.4.1",
+    "grunt-contrib-watch": "~0.5.3"
   },
   "engines": {
     "node": "0.10.x",
     "npm": "1.3.x"
   },
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-contrib-coffee": "~0.7.0",
-    "grunt-contrib-compass": "~0.6.0",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-copy": "~0.4.1",
-    "grunt-contrib-watch": "~0.5.3"
   }
 }
